--- a/style.css
+++ b/style.css
@@ -1,1 +1,146 @@
 
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+body
+{
+    margin: 0;
+    padding: 0;
+    height: 200vh;
+    background-color: #333;
+    color: #222;
+    font-family: 'Lato', sans-serif;
+
+}
+
+*
+{
+    box-sizing: border-box;
+}
+.container
+{
+    padding: 8vw;
+    width: 100vw;
+    height: 210vh;
+    overflow: hidden;
+    background-color: #FAFAFA;
+    transition: transform 0.3s linear; 
+    transform-origin: top left;
+}
+
+.cover img{
+    max-width: 100%;
+}
+
+
+.article h1{
+    margin: 0;
+}
+
+.article small
+{
+    font-style: italic;
+    color: #555;
+}
+
+.container p{
+    color: #333;
+    line-height: 1.8;
+}
+
+.circle_container
+{
+    position: fixed;
+    top: -100px;
+    left: -100px;
+}
+
+.circle_container .circle{
+    background-color: #FF7979;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    position: relative;
+    transition: transform 0.3s linear;
+}
+
+.circle_container .circle button
+{
+    position: absolute;
+    cursor: pointer;
+    top: 50%;
+    left: 50%;
+    border: none;
+    color:#fff;
+    background: transparent;
+    font-size:30px;
+    height: 100px;
+
+}
+
+.circle_container .circle button:focus
+{
+    outline: none;
+}
+
+.circle_container button#open
+{
+    left: 60%;
+}
+
+.circle button#close {
+    top: 60%; 
+    transform: rotate(90deg);
+    transform-origin: top left;
+  }
+
+ .container.show_nav .circle{
+
+    transform: rotate(-90deg);
+}
+
+.container.show_nav {
+
+    transform: rotate(-20deg);
+}
+
+nav
+{
+    position: fixed;
+    bottom: 40px;
+    left: 0px;
+    color: honeydew;
+    z-index: 100;
+}
+
+nav ul
+{
+    list-style-type: none;
+}
+
+nav ul li{
+    font-size: 20px;
+    margin-right: 10px;
+    transition: transform 0.4s ease-in;
+    transform: translateX(-160%);
+
+}
+
+nav ul li i{
+    padding: 10px;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+  .container.show_nav+nav li {
+    transform: translateX(0);
+    transition-delay: 0.3s;
+
+  }
+
+  nav ul li+li {
+    margin-left: 15px;
+  }
+  
+  nav ul li+ li+li {
+    margin-left: 30px;
+  } 
